Fixed text overflow of names in player editor

--- a/styles/edit_players.css
+++ b/styles/edit_players.css
@@ -41,10 +41,10 @@ body.windowFlag_landscapeMode #prototype {
     display: block;
     position: relative;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 0.5em;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
-    min-height: 78px;
+    border-radius: 0.5em;
+    min-height: 72px;
     width: auto;
     padding: 4px;
     margin: 0 0 4px;
@@ -58,8 +58,8 @@ body.windowFlag_landscapeMode #prototype {
     clear: both;
     margin: 0 auto 2px;
     padding: 0 6px;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 8px;
+    line-height: 13px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 0.3em;
